--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_SUPABASE_URL=your_supabase_url
-VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
+VITE_SUPABASE_URL=https://ydhxfprvjoetctvaigpo.supabase.co
+VITE_SUPABASE_ANON_KEY=sb_publishable_Lt6qui9xPitIrqipBPotew_J3tN7hxM
